--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">PopMovies</string>
     <string name="settings">Settings</string>
+    <string name="query_mode_label">Query Mode</string>
+    <string name="query_mode_default">popular</string>
+
+    <string-array name="query_mode_options">
+        <item>Populat</item>
+        <item>Highest Rated</item>
+    </string-array>
+
+    <string-array name="query_mode_values">
+        <item>popular</item>
+        <item>top_rated</item>
+    </string-array>
 </resources>
