Added Settings Menu Added Detail Screen Added query mode according to saved SharedPreference

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">PopMovies</string>
     <string name="settings">Settings</string>
-    <string name="query_mode_label">Query Mode</string>
+    <string name="query_mode_label">Search Mode</string>
     <string name="query_mode_default">popular</string>
+    <string name="query_mode_key" translatable="false">query_mode</string>
 
     <string-array name="query_mode_options">
-        <item>Populat</item>
+        <item>Popular</item>
         <item>Highest Rated</item>
     </string-array>
 
