Added Trailers to the Detail View. Those trailers can be seen on Youtube through intents.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="query_mode_label">Search Mode</string>
     <string name="query_mode_default">popular</string>
     <string name="query_mode_key" translatable="false">query_mode</string>
+    <string name="trailer">Trailer</string>
+    <string name="trailers">Trailers</string>
+    <string name="progress_message">Please wait...</string>
 
     <string-array name="query_mode_options">
         <item>Popular</item>
