--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,12 @@
     <string name="query_mode_key" translatable="false">query_mode</string>
     <string name="trailer">Trailer</string>
     <string name="trailers">Trailers</string>
+    <string name="reviews">Reviews</string>
     <string name="progress_message">Please wait&#8230;</string>
     <string name="query_mode_favorites">favorites</string>
     <string name="no_favorites">No favorites!</string>
+    <string name="by_author">By: %1$s</string>
+    <string name="average_note">%.1f / 10</string>
 
     <string-array name="query_mode_options">
         <item>Popular</item>
