--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="no_favorites">No favorites!</string>
     <string name="by_author">By: %1$s</string>
     <string name="average_note">%.1f / 10</string>
+    <string name="grid_view_error_no_connection">There are no movies to display in this mode. You can check you favorites collection, though.</string>
 
     <string-array name="query_mode_options">
         <item>Popular</item>
