--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,12 @@
     <string name="no_favorites">No favorites!</string>
     <string name="by_author">By: %1$s</string>
     <string name="average_note">%.1f / 10</string>
-    <string name="grid_view_error">There are no movies to display in this mode. Please, change the query mode in Settings.</string>
+    <string name="grid_view_error">There are no movies to display. Please, change the query mode in Settings.</string>
     <string name="grid_view_error_no_connection">There is no internet connection. You can check you favorites collection, though.</string>
     <string name="grid_view_error_needs_api_key">There are no movies to display. Please, check for an updated version of PopMovies.</string>
+
+    <string name="release_date">Release Date: </string>
+    <string name="average">Average: </string>
 
 
     <string name="pref_status" translatable="false">pref_status</string>
