--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,10 @@
     <string name="release_date">Release Date: </string>
     <string name="average">Average: </string>
 
+    <string name="add_favorite">Add as favorite</string>
+    <string name="share">Share</string>
+    <string name="remove_favorite">Remove from favorites</string>
+
 
     <string name="pref_status" translatable="false">pref_status</string>
 
