--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,14 @@
     <string name="progress_message">Please wait&#8230;</string>
     <string name="no_favorites">No favorites!</string>
     <string name="by_author">By: %1$s</string>
-    <string name="average_note">%.1f / 10</string>
+    <string name="average_note" translatable="false">%.1f / 10</string>
     <string name="grid_view_error">There are no movies to display. Please, change the query mode in Settings.</string>
     <string name="grid_view_error_no_connection">There is no internet connection. You can check you favorites collection, though.</string>
     <string name="grid_view_error_needs_api_key">There are no movies to display. Please, check for an updated version of PopMovies.</string>
+    <string name="remove_from_favorites">Removed from the favorites list</string>
+    <string name="delete_movie_error">Could not delete this movie from the favorites list</string>
+    <string name="added_as_favorite">Movie added as a favorite</string>
+    <string name="save_movie_error">Could not save this movie as a favorite</string>
 
     <string name="popular">Popular</string>
     <string name="top_rated">Top Rated</string>
@@ -46,6 +50,8 @@
     <string name="share_text">Watch a trailer for %1$s: </string>
 
     <string name="transition_poster" translatable="false">translation_poster</string>
+
+    <string name="formatted_date">MMMMM dd, yyyy</string>
 
     <string-array name="query_mode_options">
         <item>Popular</item>
